2009-04-05  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/39648
	* tree-ssa-sccvn.c (vn_reference_fold_indirect): Work around
	our &A vs. &A[0] IL deficiencies.

	* gcc.c-torture/compile/pr39648.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@145569 138bc75d-0d04-0410-961f-82ee72b054a4